--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Website Resmi PKK Informatika"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
